# ogreskel

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: crippled.skeleton  death.skeleton  high.skeleton  roedeer.mesh  roedeer.skeleton
src/: main.cpp
